--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </section>
   <footer>
       <div class="container text-center">
-        <span>Made by Laureenpe</span>
+        <h1> Created By Prateek Mishra</h1>
       </div>
     </footer>
 </body>
