--- a/index.html
+++ b/index.html
@@ -1,55 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Module 2 Coding Assignment</title>
-  <!--css-->
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="utf-8">
+  <title>Module 4 Solution</title>
+  <script>
+    var names = []; // DO NOT REMOVE
+  </script>
+  <script src="SpeakHello.js"></script>
+  <script src="SpeakGoodBye.js"></script>
+  <script src="script.js"></script>
 </head>
-
 <body>
-
-  <header>
-    <h1>Our Menu</h1>
-  </header>
-  <section id="menu">
-    <div class="container">
-      <div class="row">
-        <div class="col-4 col-12-sm">
-          <div class=" border">
-            <h2 class="text-right border-left-bottom bg-pink d-flex flex-end">Chicken</h2>
-            <p>Labore eu consequat enim irure deserunt dolor sit eu cillum dolore eiusmod reprehenderit. Labore eu consequat enim
-              irure deserunt dolor sit eu cillum dolore eiusmod reprehenderit
-            </p>
-          </div>
-        </div>
-        <div class="col-4 col-12-sm">
-          <div class=" border">
-            <h2 class="text-right border-left-bottom bg-red d-flex flex-end">Beef</h2>
-            <p>Labore eu consequat enim irure deserunt dolor sit eu cillum dolore eiusmod reprehenderit. Labore eu consequat enim
-              irure deserunt dolor sit eu cillum dolore eiusmod reprehenderit
-            </p>
-          </div>
-        </div>
-        <div class="col-4 col-12-sm">
-          <div class=" border">
-            <h2 class="text-right border-left-bottom bg-yellow d-flex flex-end">Sushi</h2>
-            <p>Labore eu consequat enim irure deserunt dolor sit eu cillum dolore eiusmod reprehenderit. Labore eu consequat enim
-              irure deserunt dolor sit eu cillum dolore eiusmod reprehenderit
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <footer>
-      <div class="container text-center">
-        <h1> Created By Prateek Mishra</h1>
-      </div>
-    </footer>
+   <h3>Inspect the page and checkout the Console in the Developer Tools.</h3>
 </body>
-
 </html>
