--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<div class="row fullscreen d-flex align-items-center justify-content-center">
 							<div class="banner-content col-lg-10">
 								<h3 style="color: greenyellow;" class="text-uppercase">Life's a Journey</h3>
-								<h1>
+								<h1 tyle="margin-top: 10px;" >
 									Amazing India!				
 								</h1>
 								<a href="destinations.html" class="primary-btn text-uppercase">Explore Now</a>
