--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 					<div class="container">
 						<div class="row fullscreen d-flex align-items-center justify-content-center">
 							<div class="banner-content col-lg-10">
-								<h3 style="color: greenyellow;" class="text-uppercase">Life's a Journey</h3>
-								<h1 tyle="margin-top: 10px;" >
+								<h3 style="color: greenyellow; style="margin-top: 30px;"" class="text-uppercase">Life's a Journey</h3>
+								<h1 style="margin-top: 10px;" >
 									Amazing India!				
 								</h1>
 								<a href="destinations.html" class="primary-btn text-uppercase">Explore Now</a>
